* Add ``META_GENERATOR_TAG`` option in conf.py allowing the meta generator
  tag to be disabled (Issue #2628)
* Add ``YUI_COMPRESSOR_EXECUTABLE``, ``CLOSURE_COMPILER_EXECUTABLE``,
  ``OPTIPNG_EXECUTABLE``, ``JPEGOPTIM_EXECUTABLE`` and
  ``HTML_TIDY_EXECUTABLE`` to configure executables for built-in filters.
  (Issue #2615)
* Allow setting custom GUID in feeds (Issue #2378)

Bugfixes
--------

* Ignore ``NEW_POST_DATE_PATH`` when creating pages (Issue #2699)
* Ensure ``post.updated`` is timezone-aware (Issue #2698)
* Pass previously missing post object and language to reST compiler
  and language to Markdown compiler (for shortcodes)
* Fix crashes when rendering subcategories (Issue #2681)
* Prevent writing cache files outside of the cache folder
  (Issue #2684)
* Fix mimetype guessing in auto mode (Issue #2645)
* Fix filters.html5lib_xmllike for laters html5lib (Issue #2648)
* Skip the current post in post lists (Issue #2666)
* Fix poor performance when compiling multiple markdown documents with
  the markdown compiler. (Issue #2660)
* Fix crash if ``SHOW_INDEX_PAGE_NAVIGATION`` is ``True`` while
  ``INDEXES_STATIC`` is ``False``. (Issue #2654)
* Make ``NEW_POST_DATE_PATH`` follow ``rrule`` if it exists (issue #2653)
* Fix crash if ``PAGE_INDEX`` is enabled (Issue #2646)

New in v7.8.3
=============

Emergency bugfix release (``nikola new_page`` did not work in v7.8.2).

Features
--------

* Sort posts chronologically with one unified function (easier to
  change). (Issue #2627)
* Sort posts in the following order (most important last): source path
  (A-Z), title (A-Z), date (reverse chronological order), priority
  meta number (descending). (Issue #2627)

Bugfixes
--------

* Fix a bug that prevents ``nikola new_page`` from working (Issue #2631)

New in v7.8.2
=============

**Minor API change:** The ``compile_string`` compiler method (partially
internal) now takes a post argument and returns between two and four