@@ -94,7 +94,7 @@ class PageIndex(Taxonomy):
         }
         context = {
             "title": self.site.config['BLOG_TITLE'](lang),
-            "pagekind": ["list", "front_page"] if dirname == '' else ["list"],
+            "pagekind": ["list", "front_page", "page_index"] if dirname == '' else ["list", "page_index"],
         }
         kw.update(context)
         return context, kw
