@@ -29,6 +29,8 @@ Features
 Bugfixes
 --------
 
+* Fix crash if ``PAGE_INDEX`` is enabled and make them actually work
+  (Issue #2646)
 * Ignore ``NEW_POST_DATE_PATH`` when creating pages (Issue #2699)
 * Ensure ``post.updated`` is timezone-aware (Issue #2698)
 * Pass previously missing post object and language to reST compiler
@@ -44,7 +46,6 @@ Bugfixes
 * Fix crash if ``SHOW_INDEX_PAGE_NAVIGATION`` is ``True`` while
   ``INDEXES_STATIC`` is ``False``. (Issue #2654)
 * Make ``NEW_POST_DATE_PATH`` follow ``rrule`` if it exists (issue #2653)
-* Fix crash if ``PAGE_INDEX`` is enabled (Issue #2646)
 
 New in v7.8.3
 =============
